tree-sitter-puddlejumper/test/corpus/binding.txt
==================
Binding
==================
@y:
hello

@x:
    test
---
(document 
    (node 
        (binding (identifier))
        (newline)
        (content)) (newline)
    (node 
        (binding (identifier))
        (children (indent)
            (node (content))
        (dedent))) 
    (newline))
    
