tree-sitter-puddlejumper/test/corpus/inline_binding.txt
==================
Inline binding
==================
@a: hello
@:hello

@b: hello
world

@b: hello
    world
---
(document 
    (node (binding (identifier)) (content) 
    (newline))
    (node (binding (identifier)) (content) 
    (newline))

    (node (binding (identifier)) (content)
    (newline))
    (node (content) 
    (newline))

    (node (binding (identifier)) (content) (children
        (indent)
        (node (content))
    (dedent)
))
)
