tree-sitter-puddlejumper/test/corpus/nested.txt
==================
Nested document
==================
hello
    world
    foo
bar
    baz
---
(document
    (node (content) (children 
        (indent) 
        (node (content)) 
        (newline)
        (node (content)) 
    (dedent)))
    (node (content) (children 
        (indent)
        (node (content)) 
    (dedent)))
    (newline)
    )
