tree-sitter-puddlejumper/test/corpus/tree.txt
==================
Nested document
==================
hello
    world
    foo
bar
    baz
---
(document
    (node (content)
        (children (indent)
            (node (content)) (newline)
            (node (content)) (dedent)))
        (node (content)
            (children (indent)
                (node (content)) (dedent)))
            (newline))